libmongoc 2.1.0 (Unreleased)
============================

## Notes

* The minimum supported MongoDB Server version is raised from 4.0 to 4.2. This is in accordance with [MongoDB Software Lifecycle Schedules](https://www.mongodb.com/legal/support-policy/lifecycles).

## Changes

Removed:

* Support for Debian 9 and Debian 10.


libmongoc 2.0.2
===============

Fixes:

  * Fix message of `bson_strerror_r` on Windows.
  * Fix memory leaks with Windows Secure Channel.
  * Fix loading PKCS#8 RSA keys with Windows Secure Channel.

Thanks to everyone who contributed to the development of this release.

  * Kevin Albertson
  * Colby Pike


libmongoc 1.30.5
================

Fixes:

  * Fix message of `bson_strerror_r` on Windows.
  * Fix memory leaks with Windows Secure Channel.
  * Fix loading PKCS#8 RSA keys with Windows Secure Channel.

Thanks to everyone who contributed to the development of this release.

  * Kevin Albertson
  * Colby Pike


libmongoc 2.0.1
===============

Fixes:

  * Fix username handling for MONGODB-X509 authentication when C driver is configured to use Secure Transport (CMake option `ENABLE_SSL=DARWIN`) or Secure Channel (CMake option `ENABLE_SSL=WINDOWS`).
  * Do not set empty partial result on client error for `mongoc_bulkwrite_execute`.

Thanks to everyone who contributed to the development of this release.

  * Kevin Albertson


libmongoc 1.30.4
================

Fixes:

  * Fix username handling for MONGODB-X509 authentication when C driver is configured to use Secure Transport (CMake option `ENABLE_SSL=DARWIN`) or Secure Channel (CMake option `ENABLE_SSL=WINDOWS`).
  * Do not set empty partial result on client error for `mongoc_bulkwrite_execute`.

Thanks to everyone who contributed to the development of this release.

  * Kevin Albertson


libmongoc 1.30.3
================

New Features:

* In anticipation of the 2.0 release of mongo-c-driver, new CMake packages and