@@ -1,6 +1,10 @@
 libbson 2.1.0 (Unreleased)
 ==========================
 
+Changed:
+
+* The CMake project now sets a CMake policy max version of `4.0` (previously unset).
+
 Removed:
 
 * Support for Debian 9 and Debian 10.
